parser/src/test/resources/corpus/valid/30_post_simple.ff
rule "Post Simple" {
  post fee to ledger account "Management Fee Payable"
}
