parser/src/test/resources/corpus/invalid/29_post_missing_to.ff
rule "Post Missing To" {
  post fee ledger account "Mgmt Fee"
}
